# olosh

./: .gitignore  Makefile  README.md  example.Dockerfile  example.ok.Dockerfile  example_generate_tls_certs.sh  main.py  push_dockerimage.py  pyproject.toml
agent/: agent.py  service.py
agent/protos/: agent_service_pb2.py  agent_service_pb2.pyi  agent_service_pb2_grpc.py
orchestrator/: orchestrator.py  server.py
orchestrator/protos/: agent_service_pb2.py  agent_service_pb2.pyi  agent_service_pb2_grpc.py
protos/: agent_service.proto
src/: push_dockerimage.py
src/agent/: agent.py  container_clients.py  utils.py
src/logger/: common.py
src/olosh/: olosh.py
src/orchestrator/: agent__grpc_service.py  agent__handler.py  agent_service.py  config.py  image_utils.py  job__handler.py  server.py
src/protos/: agent_service_pb2.pyi
upload_testing/go/client/: upload_client.go
upload_testing/go/server/: upload_server.go
